# comp0035-2024-tutorials

./: dummy.txt  pyproject.toml  temp.py
src/tutorialpkg/data/: Night workers - Data (December 2023).xlsx  paralympics_events_prepared.xlsx
src/tutorialpkg/data_db_activity/: enrollment_normalised.db  enrollment_not_normalised.db  paralympics_normalised.db  paralympics_not_normalised.db
src/tutorialpkg/mypkg1/: mymodule1.py  mymodule2.py  mymodule5.py  mymoudle6.py  mymoudle7.py  mymoudle8.py  mymoudle9.py  week3-2.py  week3.py
src/tutorialpkg/tutor_solution/: describe_output.txt  tutorial2.py
